# Agentic-Brand-Toolkit

./: REACT_AGENT_ARCHITECTURE.md  pyproject.toml
agent_experiments/: test_agent.py  test_tools.py
src/: main.py
src/adapters/: color_extractor_adapter.py  crawler_adapter.py  gemini_adapter.py  logo_extractor_adapter.py
src/application/agents/: __init__.py  agent_state.py  brand_intelligence_agent.py
src/application/graph/: graph_builder.py
src/application/services/: analytics_service.py  brand_profile_service.py  competitor_service.py  crawl_service.py  creator_guidelines_service.py  social_simulation_service.py  strategy_service.py  toolkit_service.py  visual_identity_service.py
src/application/tools/: __init__.py  base_tool.py  brand_profile_tool.py  competitor_discovery_tool.py  competitor_intelligence_tool.py  crawl_tool.py  creator_guidelines_tool.py  engagement_analytics_tool.py  gap_analysis_tool.py  growth_strategy_tool.py  request_human_review_tool.py  resolve_brand_identity_tool.py  social_dataset_tool.py  toolkit_builder_tool.py  visual_identity_tool.py
src/config/: settings.py
src/domain/models/: analytics.py  brand_profile.py  brand_toolkit.py  competitor.py  (+4 more)
src/experiments/: test_brand_profile.py  test_color_extraction.py  test_competitor_discovery.py  test_crawler.py  test_creator_guidelines.py  test_gap_analysis.py  test_growth_strategy.py  test_logo_extraction.py  test_social_dataset_generation.py  visualize_graph.py
src/ports/: crawler_port.py  llm_port.py  visual_extraction_port.py
src/utils/: helpers.py  logger.py  prompts.py
(+12 files in other folders)
