[project]
name = "agentic-brand-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ddgs>=9.14.4",
    "google-genai>=0.5.0",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.4",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.1",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
]
